--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
-    "gsap": "^2.0.2"
+    "gsap": "^2.0.2",
+    "jstrig": "^1.0.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -30,17 +31,17 @@
     "chalk": "^2.4.1",
     "css-loader": "^2.1.0",
     "express": "^4.16.4",
+    "html-webpack-plugin": "^3.2.0",
+    "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "open": "0.0.5",
     "path": "^0.12.7",
+    "rimraf": "^2.6.3",
+    "style-loader": "^0.23.1",
     "webpack": "^4.28.3",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3",
     "webpack-md5-hash": "0.0.6",
-    "rimraf": "^2.6.3",
-    "whatwg-fetch": "1.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "ncp": "^2.0.0",
-    "style-loader": "^0.23.1"
+    "whatwg-fetch": "1.0.0"
   }
 }
